[tool.poetry]
name = "hypo-gym"
version = "0.1.0"
description = ""
authors = ["reona <c0116129a7@edu.teu.ac.jp>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
gym = "^0.21.0"
nav-sim-modules = "^0.2.23"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.5.0"
descartes = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
