[tool.poetry]
name = "navstack-gym"
version = "0.1.14"
description = "Simulation environment of task with autonomous mobile robot using Navigation Stack"
authors = ["Reona Sato <www.shinderu.www@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/wwwshwww/navstack-gym"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
gym = ">=0.19.0"
nav-sim-modules = "0.3.7"
matplotlib = "^3.5.0"
descartes = "^1.1.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0", "gym"]
build-backend = "poetry.core.masonry.api"
